--- a/index.html
+++ b/index.html
@@ -58,40 +58,34 @@
 
     <!-- Menu Section -->
     <section>
-      <div class="container text-center menu-container">
 
-        <div class="menu-title">
-          <h2>Browse our menu</h2>
-        </div>
+      <!-- Menu Section Title-->
+      <div class="menu-title text-center">
+        <h2>Browse our menu</h2>
+      </div>
 
-        <div class="row menu-rows">
+      <div class="container text-center">
+        <div class="row menu-cards-row">
 
           <!-- Menu Item (Hamburgers) -->
-          <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-            <div class="bg-container">
-              <img src="assets/images/hamburger.png" class="img-fluid" alt="Responsive image">
-              <h4>Hamburgers</h4>
-            </div>
+          <div class="col-sm bg-container">
+            <img src="assets/images/hamburger.png" class="img-burger" alt="Responsive image">
+            <h4>Hamburgers</h4>
           </div>
-
           <!-- Menu Item (Sandwiches) -->
-          <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-            <div class="bg-container">
-              <img src="assets/images/sandwich.png" class="img-fluid" alt="Responsive image">
-              <h4>Sandwiches</h4>
-            </div>
+          <div class="col-sm bg-container">
+            <img src="assets/images/sandwich.png" class="img-sandwich" alt="Responsive image">
+            <h4>Sandwiches</h4>
           </div>
 
           <!-- Menu Item (Hot Dogs) -->
-          <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-            <div class="bg-container">
-              <img src="assets/images/hotdog.png" class="img-fluid" alt="Responsive image">
-              <h4>Hot Dogs</h4>
-            </div>
+          <div class="col-sm bg-container">
+            <img src="assets/images/hotdog.png" class="img-hotdog" alt="Responsive image">
+            <h4>Hot Dogs</h4>
           </div>
-
         </div>
       </div>
+
     </section>
 
   </div>
