Finished up some navbar-mobile styling

--- a/index.html
+++ b/index.html
@@ -47,6 +47,24 @@
       </ul>
     </nav>
 
+    <!-- Mobile Navbar (display at breakpoint 767) -->
+    <div>
+      <ul class="mobile-nav justify-content-center">
+        <li class="mobile-item">
+          <a class="mobile-link" aria-label="About" href="#">About</a>
+        </li>
+        <li class="mobile-item">
+          <a class="mobile-link" href="#">Menu</a>
+        </li>
+        <li class="mobile-item">
+          <a class="mobile-link" href="#">Specials</a>
+        </li>
+        <li class="mobile-item">
+          <a class="mobile-link" href="#">Contact</a>
+        </li>
+      </ul>
+    </div>
+
     <!-- Jumbotron -->
     <div class="jumbotron jumbotron-fluid bg-cover">
       <div class="overlay"></div>
